--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,19 +9,20 @@
     <br>
     <h1>Movie Showtimes</h1>
     <hr>
-    <div class="row">
+    <div class="row" *ngIf="showTimes">
         <div class="col-sm-6">
+            <!-- {{showTimes.results[0].original_title}} -->
             <div class="row">
                 <div class="col-md-12 div-pic-1"
-                [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/8WUVHemHFH2ZIP6NWkwlHWsyrEL.jpg)' }">
+                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[0] | movieImage) +')' }">
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 div-pic-2"
-                    [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/8WUVHemHFH2ZIP6NWkwlHWsyrEL.jpg)' }">
+                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[1] | movieImage) +')' }">
                 </div>
                 <div class="col-sm-6 div-pic-2"
-                    [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/8WUVHemHFH2ZIP6NWkwlHWsyrEL.jpg)' }">
+                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[2] | movieImage) +')' }">
                 </div>
             </div> 
         </div>
@@ -29,15 +30,15 @@
         <div class="col-sm-6">
             <div class="row">
                 <div class="col-sm-6 div-pic-2"
-                    [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/8WUVHemHFH2ZIP6NWkwlHWsyrEL.jpg)' }">
+                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[3] | movieImage) +')' }">
                 </div>
                 <div class="col-sm-6 div-pic-2"
-                    [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/8WUVHemHFH2ZIP6NWkwlHWsyrEL.jpg)' }">
+                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[4] | movieImage) +')' }">
                 </div>
             </div> 
             <div class="row">
                 <div class="col-md-12 div-pic-1"
-                [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/8WUVHemHFH2ZIP6NWkwlHWsyrEL.jpg)' }">
+                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[5] | movieImage) +')' }">
                 </div>
             </div>
         </div>
