Sending info with @input search component search from navbar movie component design routerLink receives params and stores search

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,32 @@
-<p>search works!</p>
+<div class="container main-container">
+    <div class="col">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label>Search:</label>
+                <input [(ngModel)]="search"
+                    type="text"
+                    name="search"
+                    class="form-control"
+                    (keyup.enter)="searchMovie()"
+                    placeholder="Search movie">
+            </div>
+        </div>
+    </div>
+
+    <div class="row animated fadeIn slow">
+        <div class="card-columns">
+            <div class="card" *ngFor="let movie of _ms.movies">
+                <img [src]="movie|movieImage" class="card-img-top" [alt]="movie.original_title">
+                <div class="card-body">
+                    <h5 class="card-title">{{movie.original_title}}</h5>
+                    <p class="card-text text-justify">{{movie.overview | slice:0:250}} ...</p>
+                    <button type="button"
+                            class="btn btn-outline-primary btn-block"
+                            [routerLink]="['/movie', movie.id, 'search', search]"
+                            >More info</button>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
