--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,42 +7,13 @@
 
 <div class="container">
     <br>
-    <h1>Movie Showtimes</h1>
-    <hr>
-    <div class="row" *ngIf="showTimes">
-        <div class="col-sm-6">
-            <!-- {{showTimes.results[0].original_title}} -->
-            <div class="row">
-                <div class="col-md-12 div-pic-1"
-                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[0] | movieImage) +')' }">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 div-pic-2"
-                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[1] | movieImage) +')' }">
-                </div>
-                <div class="col-sm-6 div-pic-2"
-                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[2] | movieImage) +')' }">
-                </div>
-            </div> 
-        </div>
-        
-        <div class="col-sm-6">
-            <div class="row">
-                <div class="col-sm-6 div-pic-2"
-                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[3] | movieImage) +')' }">
-                </div>
-                <div class="col-sm-6 div-pic-2"
-                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[4] | movieImage) +')' }">
-                </div>
-            </div> 
-            <div class="row">
-                <div class="col-md-12 div-pic-1"
-                [ngStyle]="{ 'background-image': 'url( '+ (showTimes.results[5] | movieImage) +')' }">
-                </div>
-            </div>
-        </div>
-        
-    </div>
+   <app-gallery [movies]="shows | slice:0:6"
+                title="Movie Showtimes"></app-gallery>
+
+    <app-gallery [movies]="populars | slice:0:6"
+                title="Most Populars"></app-gallery>
+
+    <app-gallery [movies]="upcoming | slice:0:6"
+                title="Upcoming"></app-gallery>    
     
 </div>
