--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,1 +1,25 @@
-<p>movie works!</p>
+<div *ngIf="movie"
+    class="container main-container animated fadeIn slow">
+    <h1>{{movie.title}}</h1>
+    <div class="row">
+        <div class="col-md-5">
+            <img [src]="movie|movieImage: true" [alt]="movie.original_title"
+                    class="img-thumbnail img-fluid">
+        </div>
+
+        <div class="col-md-7">
+            <hr>
+            <h3>Overview</h3>
+            <hr>
+            <h4>{{movie.tagline}}</h4>
+            <p class="text-justify">{{movie.overview}}</p>
+            <p>Opinion average: <span class="badge badge-primary">{{movie.vote_average}} </span></p>
+            <br>
+            <p>Budget: <span class="badge badge-warning">{{movie.budget | currency }} </span></p>
+
+            <button [routerLink]="['/'+goBack,currentSearch]"
+                    class="btn btn-outline-danger">Go back</button>
+        </div>
+
+    </div>
+</div>
