--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body{
     margin-bottom: 150px;
   }
   
-  .puntero{
+  .pointer{
     cursor: pointer;
   }
   
@@ -21,7 +21,7 @@ body{
     background-size: cover;
   }
   
-  .pic-titulo{
+  .pic-title{
     position: absolute;
     bottom: 0px;
     left: 10px;
